PA3/tests/bad/bad_assign.cl
class Main {
	a : Int;
	main() : SELF_TYPE {
		a <- "Hello"
	};
};